--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,19 @@ description:
   Teste with DART
 homepage: https://lags.dev/test_dart/news
 repository: https://github.com/luiz-antonio/test_dart
+issue-tracker:  https://github.com/luiz-antonio/test_dart/issues
+documentation: https://lags.dev/test_dart/docs
 environment:
   sdk: '>=2.10.0 <3.0.0'
+
+executables:
+  test_dart: main
+
+dependencies: 
+  block: ^8.0.0
+  http: ^14.3.2
+
+dev_dependencies:
+  test: '>=1.15.0 <2.0.0'
   
+
